plugins {
	id 'java'
	id 'org.springframework.boot' version '3.4.0'
	id 'io.spring.dependency-management' version '1.1.6'
}

group = 'hu.davidder.'
version = '0.0.1-SNAPSHOT'

java {
	toolchain {
		languageVersion = JavaLanguageVersion.of(23)
	}
}

//https://github.com/spring-projects/spring-framework/wiki/Upgrading-to-Spring-Framework-6.x#parameter-name-retention
tasks.withType(JavaCompile).configureEach {
    options.compilerArgs.add("-parameters")
}

tasks.withType(GroovyCompile).configureEach {
    groovyOptions.parameters = true
}

configurations {
	compileOnly {
		extendsFrom annotationProcessor
	}
}

repositories {
	mavenCentral()
}

dependencies {
// https://mvnrepository.com/artifact/org.springdoc/springdoc-openapi-starter-webmvc-ui
implementation 'org.springdoc:springdoc-openapi-starter-webmvc-ui:2.6.0'
// https://mvnrepository.com/artifact/org.imgscalr/imgscalr-lib
implementation 'org.imgscalr:imgscalr-lib:4.2'
// https://mvnrepository.com/artifact/commons-io/commons-io
implementation 'commons-io:commons-io:2.17.0'
// https://mvnrepository.com/artifact/com.bucket4j/bucket4j-core
//implementation 'com.bucket4j:bucket4j-core:8.10.1'
// https://mvnrepository.com/artifact/com.bucket4j/bucket4j_jdk17-redis-common
implementation 'com.bucket4j:bucket4j_jdk17-redis-common:8.14.0'
// https://mvnrepository.com/artifact/com.bucket4j/bucket4j_jdk17-redisson
implementation 'com.bucket4j:bucket4j_jdk17-redisson:8.14.0'
// https://mvnrepository.com/artifact/org.redisson/redisson-spring-boot-starter
implementation 'org.redisson:redisson-spring-boot-starter:3.38.1'
// https://mvnrepository.com/artifact/org.springframework.boot/spring-boot-starter-security
implementation 'org.springframework.boot:spring-boot-starter-security:3.3.5'
//https://mvnrepository.com/artifact/io.jsonwebtoken/jjwt-api/0.12.6
implementation 'io.jsonwebtoken:jjwt-api:0.12.6'
// https://mvnrepository.com/artifact/org.springframework.security/spring-security-crypto
implementation 'org.springframework.security:spring-security-crypto:6.3.4'




	implementation 'org.springframework.boot:spring-boot-starter-cache'
	implementation 'org.springframework.boot:spring-boot-starter-actuator'
	implementation 'org.springframework.boot:spring-boot-starter-data-jdbc'
	implementation 'org.springframework.boot:spring-boot-starter-data-jpa'
	implementation 'org.springframework.boot:spring-boot-starter-data-redis-reactive'
	implementation 'org.springframework.boot:spring-boot-starter-jdbc'
	implementation 'org.springframework.boot:spring-boot-starter-validation'
	implementation 'org.springframework.boot:spring-boot-starter-web'
	developmentOnly 'org.springframework.boot:spring-boot-devtools'
	developmentOnly 'org.springframework.boot:spring-boot-docker-compose'
	runtimeOnly 'org.postgresql:postgresql'
	annotationProcessor 'org.springframework.boot:spring-boot-configuration-processor'
	testImplementation 'org.springframework.boot:spring-boot-starter-test'
	testRuntimeOnly 'org.junit.platform:junit-platform-launcher'
}

dependencyManagement {
	imports {
		
	}
}

tasks.named('test') {
	useJUnitPlatform()
}
